@@ -7,6 +7,7 @@ Patches:
   Christophe Hermier <chris.hermier@laposte.net>
   Frederic Giudicelli <frederic.giudicelli@newpki.org>
   Tim Dijkstra <tim@famdijkstra.org>
+  Tim Kosse <botg@users.sourceforge.net>
 
 Translations:
   Traditional Chinese:  Leo Liaw <leo@mis.ccu.edu.tw> 
