@@ -3,6 +3,7 @@ Version 1.2.6
 -------------
 
 - fixed catalog I/O to correctly handle automatic comments (Tim Dijkstra)
+- [Win32] visual improvements to main window (Tim Kosse)
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
